# Moku-reader

./: .gitignore  BUILD.md  CLAUDE.md  README.md  bookmark-fix-plan.md  build.bat  index.html  memory_optimization_plan.md  novel-rewrite-plan.md  package-lock.json  package.json  scan-animation-demo.html  scan-animation-samples.html  scan-icon-schemes.html  scan-outer-ring.html  scan-search-icons.html  scan-smooth-schemes.html  task_plan.md  tsconfig.json  tsconfig.node.json  v1.0.2-to-v1.0.3-changelog.md  vite.config.ts  世界观设定集.md  功能文件索引.md  故事大纲.md  第九章-坠入海面.md
WordsType/: README.txt  install_fonts.bat  install_fonts.ps1
dist2/: index.html
dist2/assets/: dpi-fvP-W2qr.js  index-CLC-6M9N.css  index-CMAyMz1r.js  index-DyZrY5ot.js  window-BWd3Cypy.js
novel-reader/: .gitignore  BUILD.md  build-full.bat  build-lite.bat  build.bat  memory_optimization_plan.md  novel-reader-preview.html  novel-rewrite-plan.md  package-lock.json  package.json  progress_plan.md  test-autoblink-bug.cjs  test-bookmark-bug.cjs  tsconfig.json  tsconfig.node.json
novel-reader/docs/: fix_novel_chapter_transition_plan.md
novel-reader/novel-reader/: package.json
novel-reader/src/: App.tsx  store.ts
novel-reader/src-tauri/: Cargo.toml  tauri.conf.json
public/: pdf.worker.mjs
src/: App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: comic.rs  fanqie.rs  lib.rs  main.rs  parser.rs  reader.rs
src/components/: ChapterList.tsx  DebugPanel.tsx  FlatIcons.tsx  Header.tsx  Reader.tsx  (+13 more)
user_fonts/: README.txt
(+45 files in other folders)
