[package]
name = "novel-reader"
version = "1.0.0"
description = "墨读 - 本地小说阅读器"
authors = ["novel-reader"]
edition = "2021"

[lib]
name = "novel_reader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
regex = "1"
regex-lite = "0.1"
dirs-next = "2.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2"
zip = "2"
base64 = 